adjusted homePage and ayatPage to look better on mobile // play/pause icons now changes when audio state changes // search page infinite scrolling was not working on mobile phone and i fixed it

--- a/src/scss/ayePage.scss
+++ b/src/scss/ayePage.scss
@@ -126,6 +126,7 @@
 .ayeTarjome {
     color: rgba(119, 71, 49, 0.856);
     margin: 25px 0;
+    height: inherit;
     font-size: 28px;
     font-weight: 500;
     font-family: yekan;
@@ -190,20 +191,36 @@ path {
 .playButton:hover {
     font-size: 34px;
 }
+.aye-buttons-container {
+    display: flex;
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+}
+.aye-texts-container {
+    width: 100%;
+    margin-bottom: 20px;
+}
 .ayeButtons {
-    width: 30%;
+    width: 20%;
+    margin: 0 auto;
     position: relative;
-    height: 120px;
+    height: inherit;
     z-index: 100;
+    div {
+        width: 100%;
+        height: 55px;  
+    }
     p {
-        font-size: 20px;
+        font-size: 15px;
         text-align: center;
     }
     svg {
         position: relative;
         right: 50%;
-        top: 40%;
-        transform: translate(50%, -50%);
+        transform: translateX(50%);
+        top: 10px;
+
     }
 }
 .scrollTop {
@@ -219,13 +236,7 @@ path {
     }
 }
 
-@media (max-height: 600px) {
-    .ayeButtons {
-      p {
-          display: none;
-      }   
-    }
-}
+
 
 @media only screen and (min-width: 900px) {
     .aye-main {
